--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mobx-react": "^6.1.5",
     "mobx-state-tree": "^3.15.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "uuidv4": "^6.0.1"
   }
 }
