--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "MIT",
   "scripts": {
     "tslint": "tslint 'src/**/*.{ts,tsx}'",
-    "eslint": "eslint",
+    "eslint": "eslint ./src",
     "dev": "webpack --config ./webpack.config.js --watch"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^2.14.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-react": "^7.17.0",
     "prettier": "^1.19.1",
     "ts-loader": "^6.2.1",
