--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "tslint": "tslint 'src/**/*.{ts,tsx}' --fix",
-    "eslint": "eslint './src/**' --fix",
+    "eslint": "eslint './src/**/*.{ts,tsx}' --fix",
     "dev": "webpack --config ./webpack.config.js --watch"
   },
   "devDependencies": {
