--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^1.19.1",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
